--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,90 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
+<web-app id="WebApp_ID" version="2.4"
+	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
 	<context-param>
-        <param-name>slim3.rootPackage</param-name>
-        <param-value>slim3</param-value>
-    </context-param>
-    <context-param>
-        <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
-        <param-value>application</param-value>
-    </context-param>
-    <context-param>
-        <param-name>javax.servlet.jsp.jstl.fmt.request.charset</param-name>
-        <param-value>UTF-8</param-value>
-    </context-param>
+		<param-name>slim3.rootPackage</param-name>
+		<param-value>jp.co.softem.apps</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+		<param-value>application</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.servlet.jsp.jstl.fmt.request.charset</param-name>
+		<param-value>UTF-8</param-value>
+	</context-param>
 
-    <filter>
-        <filter-name>HotReloadingFilter</filter-name>
-        <filter-class>org.slim3.controller.HotReloadingFilter</filter-class>
-    </filter>
-    <filter>
-        <filter-name>DatastoreFilter</filter-name>
-        <filter-class>org.slim3.datastore.DatastoreFilter</filter-class>
-    </filter>   
-    <filter>
-        <filter-name>FrontController</filter-name>
-        <filter-class>org.slim3.controller.FrontController</filter-class>
-    </filter>
+	<filter>
+		<filter-name>HotReloadingFilter</filter-name>
+		<filter-class>org.slim3.controller.HotReloadingFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>DatastoreFilter</filter-name>
+		<filter-class>org.slim3.datastore.DatastoreFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>FrontController</filter-name>
+		<filter-class>org.slim3.controller.FrontController</filter-class>
+	</filter>
 
-    <filter-mapping>
-        <filter-name>HotReloadingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>    
-    <filter-mapping>
-        <filter-name>DatastoreFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>FrontController</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-    </filter-mapping>
-    
-    <servlet>
-        <servlet-name>GlobalTransactionServlet</servlet-name>
-        <servlet-class>org.slim3.datastore.GlobalTransactionServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    
-    <!--
-    <servlet>
-        <servlet-name>GWTServiceServlet</servlet-name>
-        <servlet-class>org.slim3.gwt.server.rpc.GWTServiceServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    -->
-      
-    <servlet-mapping>
-        <servlet-name>GlobalTransactionServlet</servlet-name>
-        <url-pattern>/slim3/gtx</url-pattern>
-    </servlet-mapping>
-    
-    <!--
-    <servlet-mapping>
-        <servlet-name>GWTServiceServlet</servlet-name>
-        <url-pattern>*.s3gwt</url-pattern>
-    </servlet-mapping>
-    -->
-    
-    <security-constraint>
-        <web-resource-collection>
-            <url-pattern>*.jsp</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-        </auth-constraint>
-    </security-constraint>
-    <security-constraint>
-        <web-resource-collection>
-            <url-pattern>/slim3/gtx</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>admin</role-name>
-        </auth-constraint>
-    </security-constraint>
+	<filter-mapping>
+		<filter-name>HotReloadingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>DatastoreFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>FrontController</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
+
+	<servlet>
+		<servlet-name>GlobalTransactionServlet</servlet-name>
+		<servlet-class>org.slim3.datastore.GlobalTransactionServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<!--
+		<servlet> <servlet-name>GWTServiceServlet</servlet-name>
+		<servlet-class>org.slim3.gwt.server.rpc.GWTServiceServlet</servlet-class>
+		<load-on-startup>1</load-on-startup> </servlet>
+	-->
+
+	<servlet-mapping>
+		<servlet-name>GlobalTransactionServlet</servlet-name>
+		<url-pattern>/slim3/gtx</url-pattern>
+	</servlet-mapping>
+
+	<!--
+		<servlet-mapping> <servlet-name>GWTServiceServlet</servlet-name>
+		<url-pattern>*.s3gwt</url-pattern> </servlet-mapping>
+	-->
+
+	<jsp-config>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<el-ignored>false</el-ignored>
+			<page-encoding>UTF-8</page-encoding>
+			<scripting-invalid>false</scripting-invalid>
+			<include-prelude>/header.jsp</include-prelude>
+		</jsp-property-group>
+	</jsp-config>
+
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name></web-resource-name>
+			<url-pattern>*.jsp</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+		</auth-constraint>
+	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name></web-resource-name>
+			<url-pattern>/slim3/gtx</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+
 </web-app>
